[package]
name = "p2panda-gql-replication"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "3.0.34"
arrayvec = "0.5.2"
base64 = "0.13"
bamboo-rs-core-ed25519-yasmf = "0.1.0"
bytes = "1.1.0"
futures = "0.3.21"
log = "0.4"
lru = "0.7.0"
pretty_env_logger = "0.4.0"
qp2p = "0.28.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
snafu = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
